# mansk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  deny.toml
.github/workflows/: ci.yml
src/: apply.rs  lock.rs  main.rs  manifest.rs  plan.rs  resolve.rs  targets.rs
tests/: cli_manifest.rs  collection_workflow.rs  git_workflow.rs  local_workflow.rs  mvp_e2e.rs  ownership_workflow.rs  target_workflow.rs  update_confirmation.rs
