[package]
name = "mansk"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Reproducible agent skills manager"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.20"
